# layout-again

./: AUTHORS  CMakeLists.txt
data/: com.github.jovennan.layout-again.appdata.xml  com.github.jovennan.layout-again.desktop
po/: layout-again.pot
src/: layout-again.vala
